--- a/Materialize - Viajes/index.html
+++ b/Materialize - Viajes/index.html
@@ -59,7 +59,7 @@
               </div>
             </div>
           </nav>
-          <div class="col s12 m9 l10 card-panel right row opacidad">
+          <div class="col s12 m10 l11 card-panel right row opacidad">
             <div class="col s12 l4 row">
               <div class="col s12 m6 l12">
                 <img src="img/cartagena.jpeg" alt="" width="100%">
@@ -82,8 +82,9 @@
               </div>
             </div>
           </div>
-          <div class="card-panel col s12 l8 row">
+          <div class="card-panel col s12 l9 row">
             <h3>Aruba</h3>
+            <h4>Fecha de Publicacion 17/01/18</h4>
             <div class="col s12 m12 l5">
               <img src="img/beach.jpg" alt="" width="100%">
             </div>
@@ -91,7 +92,7 @@
               <p>Aruba (en neerlandés: Aruba) es un país autónomo​ insular del Reino de los Países Bajos —junto a Curazao, Sint Maarten y los Países Bajos—. Se establece en la isla homónima del grupo de Sotavento, perteneciente a las Antillas Menores. El país autónomo se sitúa a 25 km al norte de la península de Paraguaná, al noroeste de Venezuela, al sur del mar Caribe, al este del archipiélago de Los Monjes y la península de la Guajira y al oeste de otro país autónomo neerlandés, Curazao.</p>
             </div>
             <p>Hasta el año 1986 formó parte de las Antillas Neerlandesas (disueltas en 2010) y actualmente no forma parte de la Unión Europea a semejanza de otros territorios de soberanía europea que comparten este estatus, como Groenlandia (Dinamarca), Polinesia Francesa (Francia) e Islas Caimán (Reino Unido). Sin embargo, existen otros territorios exteriores a Europa de soberanía de países de la Unión Europea, que sí son parte integrante de esta, como la Guayana Francesa en Sudamérica. A pesar de ello, todos los ciudadanos de Aruba poseen pasaporte neerlandés, y por ende los arubeños gozan de los mismos derechos que los ciudadanos de la Unión Europea.</p>
-            <p>El turismo es el principal apoyo de la pequeña economía arubana, la mayor fuente de empleos de los habitantes de la isla. El rápido crecimiento del sector turístico durante la década de 1990 ha dado lugar a una expansión substancial de otras actividades económicas. La construcción inmobiliaria, con mayor capacidad en hoteles es cinco veces superior al nivel del año de 1985. Esto ha producido unas cifras bajas de desempleo, provocando la falta de mano de obra y una subida de salarios.</p>
+            <p>El turismo es el principal apoyo de la pequeña economía arubana, la mayor fuente de empleos de los habitantes de la isla. El rápido crecimiento del sector turístico durante la década de 1990 ha dado lugar a una expansión substancial de otras actividades económicas. La construcción inmobiliaria, con mayor capacidad en hoteles es cinco veces superior al nivel del año de 1985.</p>
           </div>
           <div class="card-panel col s12 m12 l3 row right">
             <h4 class="center-align">Perfil del Autor</h4>
